# nextgenlp

./: .gitignore  README.md  setup.cfg
nextgenlp/: config.py  count_vectorizer.py  embedders.py  genie.py  genie_constants.py  pmi_vectorizer.py  synapse.py
notebooks/: skipgrams.ipynb
scripts/: combine_vecs.py  make_embeddings_v0.py  print_gene_panel_coverage.py  test_count_vectorizer.py  test_embed.py  test_pmi_vectorizer.py  test_read.py  test_read_set_paths_manually.py  test_subset.py
streamlit-app/: app.py
