[metadata]
name = nextgenlp
version = attr: nextgenlp.__version__

[options]
packages = find:
include_package_data = True
python_requires = >=3.7,<3.11
install_requires =
  configparser
  loguru
  numpy
  openpyxl
  pandas
  pyarrow
  scikit-learn
  scipy
  synapseclient
  tqdm

[options.extras_require]
dev =
  black
fun =
  ipython
  jupyter
plot =
  chart_studio
  matplotlib
  plotly
  seaborn
